--- a/tmux.conf
+++ b/tmux.conf
@@ -10,6 +10,7 @@ unbind -Tcopy-mode MouseDragEnd1Pane
 # Use 256 colors
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ',screen-256color:Tc'
+#set -as terminal-overrides ',xterm*:sitm=\E[3m'
 #set -ga terminal-overrides ',xterm-24bit*:Tc'
 #set -as terminal-overrides ',xterm-*:Tc'
 
