--- a/tmux.conf
+++ b/tmux.conf
@@ -2,10 +2,13 @@
 set -g default-shell $SHELL
 
 # Enable mouse actions
-set -g mouse on
+setw -g mode-mouse on
+set -g mouse-select-pane on
+set -g mouse-resize-pane on
+set -g mouse-select-window off
 
 # Do not copy or clear the selection or exit copy mode when the mouse is released.
-unbind -Tcopy-mode MouseDragEnd1Pane
+# unbind -T copy-mode MouseDragEnd1Pane
 
 # Use 256 colors
 set -g default-terminal "screen-256color"
@@ -43,7 +46,7 @@ set -s escape-time 0
 setw -g aggressive-resize on
 
 # Sets somethings what vim relies on.
-set -g focus-events on
+# set -g focus-events on
 
 # Allows us to use C-a a <command> to send commands to a TMUX session inside 
 # another TMUX session
@@ -54,13 +57,13 @@ setw -g monitor-activity on
 set -g visual-activity on
 
 # Plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-copycat'
-set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'dracula/tmux'
+#set -g @plugin 'tmux-plugins/tpm'
+#set -g @plugin 'tmux-plugins/tmux-sensible'
+#set -g @plugin 'tmux-plugins/tmux-copycat'
+#set -g @plugin 'tmux-plugins/tmux-yank'
+#set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+#set -g @plugin 'christoomey/vim-tmux-navigator'
+#set -g @plugin 'dracula/tmux'
 
 set -g mode-keys vi
 
@@ -71,11 +74,11 @@ set-window-option -g xterm-keys on
 
 #set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
 
-set -g @dracula-show-battery false
-set -g @dracula-show-network false
-set -g @dracula-show-weather false
-# set -g @dracula-show-powerline true
-set -g @dracula-military-time true
+#set -g @dracula-show-battery false
+#set -g @dracula-show-network false
+#set -g @dracula-show-weather false
+## set -g @dracula-show-powerline true
+#set -g @dracula-military-time true
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+#run '~/.tmux/plugins/tpm/tpm'
