New nvim config. Some mac specific stuff

--- a/tmux.conf
+++ b/tmux.conf
@@ -8,8 +8,10 @@ set -g mouse on
 unbind -Tcopy-mode MouseDragEnd1Pane
 
 # Use 256 colors
+#set -g default-terminal "tmux-256color"
 set -g default-terminal "screen-256color"
-set -ga terminal-overrides ',screen-256color:Tc'
+set -ga terminal-overrides ",xterm-256color*:Tc"
+#set -ga terminal-overrides ',screen-256color:Tc'
 #set -as terminal-overrides ',xterm*:sitm=\E[3m'
 #set -ga terminal-overrides ',xterm-24bit*:Tc'
 #set -as terminal-overrides ',xterm-*:Tc'
@@ -69,13 +71,15 @@ unbind C-Left
 unbind C-Right
 set-window-option -g xterm-keys on
 
-#set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
 
-set -g @dracula-show-battery false
-set -g @dracula-show-network false
-set -g @dracula-show-weather false
-# set -g @dracula-show-powerline true
+set -g @dracula-plugins "time"
+set -g @dracula-show-left-icon session
+set -g @dracula-show-powerline false
+set -g @dracula-day-month true
 set -g @dracula-military-time true
+# set -g status-right '#{prefix_highlight} | %a %Y-%m-%d %H:%M'
+
+set -g status-style 'bg=colour18 fg=colour137 dim'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run "${HOME}/.tmux/plugins/tpm/tpm"
