--- a/starship.toml
+++ b/starship.toml
@@ -165,7 +165,7 @@ style = 'bold fg:blue'
 disabled = false
 
 [git_status]
-format = '[\[]($style)$all_status$ahead_behind[\]]($style) '
+format = '([\[]($style)$all_status$ahead_behind[\]]($style) )'
 conflicted = '[!](bold fg:red)'
 ahead = '[⇡${count}](bold fg:yellow)'
 diverged = '[⇕⇡${ahead_count}⇣${behind_count}](bold fg:yellow)'
